--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -194,6 +194,13 @@ $btn-padding-y-lg:            .5rem !default;
 $btn-padding-x-lg:            1rem !default;
 $btn-font-size-lg:            $font-size-lg !default;
 
+//fab类型的按钮边框 lal2020.06.20
+$btn-fab-width-lg:            3rem !default;
+$btn-fab-height-lg:           3rem !default;
+$btn-fab-width-sm:            2rem !default;
+$btn-fab-height-sm:           2rem !default;
+
+
 // 按钮边框
 $btn-border-width:            $border-width !default;
 
