--- a/src/components/Button/_style.scss
+++ b/src/components/Button/_style.scss
@@ -8,6 +8,7 @@
     text-align: center;
     vertical-align: middle;
     background-image: none;
+    outline: 0;
     border:$btn-border-width solid transparent;
     @include button-size($btn-padding-y,$btn-padding-x,$btn-font-size,$border-radius);
     box-shadow: $btn-box-shadow;
@@ -21,6 +22,9 @@
         > *{
             pointer-events: none;
         }
+    };
+    &:focus{
+        outline: 0px;
     }
 }
 .btn-lg{
@@ -57,4 +61,20 @@
         color:$btn-link-disabled-color;
         pointer-events:none;
     }
+}
+.btn-fab{
+    border-radius: 50%;
+    padding:0;
+    & svg{
+        vertical-align: -3px;
+    }
+}
+.btn-fab-lg{
+    width:$btn-fab-width-lg;
+    height:$btn-fab-height-lg;
+
+}
+.btn-fab-sm{
+    width:$btn-fab-width-sm;
+    height:$btn-fab-height-sm;
 }
